# Langchain_Tutorials

./: .gitignore  README.md  pyproject.toml  requirements.txt
GenAI_for_vision/: 1.image_generation.ipynb  2.image_to_pixel.ipynb  4.prompt_engineering.ipynb
Pre requisite for Gen Ai/: Five.ipynb  Four.ipynb  Two.ipynb
RAG/: Chat_Tube.ipynb  README.md  chat_tube.md
agents_with_langchain/: Basic Prerequisite.ipynb  Example CrewAi.ipynb  Example_Autogen.ipynb  README.md  simple_agent.ipynb  simple_agent.py
document_loaders/: README.md  csv_loader.py  dir_loader.py  pdf_loader.py  text_loader.py  web_loader.py
langchain_chains/: README.md  conditional_chains.py  parallel_chain.py  sequential_chain.py  simple_chain.py
langchain_models/: README.md
langchain_models/LLMS/: llm_demo.py
langchain_models/chat_models/: chat_model_claude.py  chat_model_google.py  chat_model_huggingface.py  chat_model_local_hf.py  chat_model_openai.py
langchain_prompts/: README.md  chatbot.py  dyna_pm_ui.py  dynamic_list_messages.py  messages.py  template_generator.py
langchain_runnables/: README.md  Runnable.ipynb  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
retrievers/: README.md  retrievers_demo.ipynb  retrievers_demo.py
text_splitters/: README.md  doc_struc.py  length_based.py  rec_text_splitter.py  semantic_splitter.py
tools_in_langchain/: README.md  custom_tool_with_basetool.py  custom_toolkit.py  duckduckgo.py
vector_stores/: README.md  chromadb_example.ipynb  chromadb_example.py
(+23 files in other folders)
