[project]
name = "langchain_tutorials"
version = "0.1.0"
description = "This project will help me to learn Langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.31",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "transformers>=4.55.4",
]
